# support-agent-dev

./: .gitignore  CLAUDE.md  README.md  app.yml  databricks.yml  deploy.sh  package.json  pyproject.toml  setup-grants.sql  tsconfig.json
.build/: app.yml  elegant_whale-0.0.0+20260503194212-py3-none-any.whl  elegant_whale-0.0.0+20260505095315-py3-none-any.whl  elegant_whale-0.0.0+20260505140623-py3-none-any.whl  elegant_whale-0.0.0+20260505173220-py3-none-any.whl  requirements.txt
src/elegant_whale/backend/: app.py  chat_router.py
src/elegant_whale/backend/core/: _config.py
src/elegant_whale/ui/: index.html
src/elegant_whale/ui/components/ai-elements/: message.tsx
src/elegant_whale/ui/components/apx/: app-sidebar.tsx  logo.tsx
src/elegant_whale/ui/components/voltway/: agent-workspace.tsx  data.ts  icons.tsx  supervisor-view.tsx
src/elegant_whale/ui/lib/: api.ts
src/elegant_whale/ui/routes/: __root.tsx  agent.tsx  index.tsx  supervisor.tsx
src/elegant_whale/ui/styles/: globals.css
src/elegant_whale/ui/types/: routeTree.gen.ts
